[package]
name = "uchimizu"
version = "0.1.0"
edition = "2021"

[features]
default = []
serde = ["dep:serde", "dep:chrono"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

[dev-dependencies]
tokio = {version="1", features=["full"]}
