[package]
name = "uchimizu"
version = "0.0.1"
edition = "2021"
authors = ["Takeru KODAMA <zen.en.tonal@gmail.com>"]
description = "cache"
repository = "https://github.com/zen-en-tonal/uchimizu"
license = "MIT OR Apache-2.0"
keywords = ["cache"]

[features]
default = []
serde = ["dep:serde", "dep:chrono"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

[dev-dependencies]
tokio = {version="1", features=["full"]}
